
v0.28 (release 2008.??.??):

USER-VISIBLE CHANGES:
- Minor text cleanups. (Phil, FM; Cory Hickey for some fixes)
- Minor dialog behavior fixes. (FM)
* New non-research task: CPU Pool.  Performs maintenance, construction, jobs. 
  Bases with no other task assigned will contribute to the CPU Pool. (FM)
* New non-research task: Sleep.  Bases assigned to Sleep will remain idle and
  be harder to detect. (FM)
- The CHANGE buttons inside the base dialog now show their hotkeys. (FM)
- The location buttons have had their on-screen positions tweaked. (FM)
- Start location is randomized to any of the 5 available continents. (FM)
* CPU is now used to design constructions, Cash to buy the required items, and
  Labor (time) to assemble the final construction. (FM)
- Location and city names can now be localized. (FM)
- Numbers automatically localize to the correct comma-vs-period usage. (FM)
* Added a new difficulty level: Ultra Hard. (FM, emh for suggestion)
* Build times are now difficulty-dependent. (FM)
* The grace period applied to a new base is now difficulty-dependent. (FM)
* The suspicion gain per discovery is now difficulty-dependent. (FM)
- Bases in a location are now sorted by size, then name. (FM, emh for
  suggestion)
* The global grace period now expires on Normal and above if you build more
  than a certain number of bases, and on Ultra Hard if you build certain types
  of bases. (FM)
- Locations with recently-discovered bases are now more likely to have other
  bases discovered. (FM)
* Base detection chances and overall suspicion are now unknown until certain
  new technologies have been researched. (Phil)
* Incomplete bases no longer support the AI. (FM)
- It's possible to get lucky when hacking some random computer.  (FM)
* Seconds, minutes, and hours now matter much more than they used to. (FM)
- You can use the Enter on the numeric keypad like the regular Enter key.
  (Phil, gare for suggestion)

OTHER CHANGES: